--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,7 @@ author:
   - 'Ewen, Colin <draecas@gmail.com>'
 build_requires:
   Test::More: 0
+  YAML: 0
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
@@ -20,4 +21,4 @@ no_index:
 requires:
   Dancer: 0
   perl: 5.006
-version: v1.0.0
+version: v1.0.1
